// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBackgroundStyles Get a correct background styles 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {
        "border": "none",
      },
      "l": Object {
        "border": "none",
      },
      "m": Object {
        "border": "none",
      },
      "s": Object {
        "border": "none",
      },
      "xl": Object {
        "border": "none",
      },
      "xs": Object {
        "border": "none",
      },
      "xxl": Object {
        "border": "none",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__color": Object {
    "background": Object {
      "general": Object {
        "background-color": "var(--maxi-undefined-color-1)",
        "clip-path": "rgba(2,0,36,1)",
      },
      "label": "Background Color",
    },
  },
}
`;

exports[`getBackgroundStyles Get a correct background styles 2`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__images": Object {
    "imageBackground": Object {
      "general": Object {
        "background-attachment": "scroll",
        "background-clip": "border-box",
        "background-image": "url('/test/')",
        "background-origin": "padding-box",
        "background-position": "relative",
        "background-repeat": "no-repeat",
        "background-size": "auto",
        "clip-path": "none",
        "opacity": 0.3,
      },
      "label": "Background Image",
    },
  },
}
`;

exports[`getBackgroundStyles Get a correct background styles 3`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__video-player": Object {
    "videoBackground": Object {
      "general": Object {
        "opacity": 1,
      },
      "label": "Video Background",
    },
  },
}
`;

exports[`getBackgroundStyles Get a correct background styles 4`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__svg": Object {
    "SVGBackground": Object {
      "general": Object {
        "height": "2%",
        "left": "1%",
        "top": "4%",
      },
      "label": "SVG Wrapper Background",
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__svg svg *": Object {
    "SVGBackground": Object {
      "general": Object {
        "height": "2%",
      },
      "label": "SVG Background",
    },
  },
}
`;

exports[`getBackgroundStyles Get a correct background styles 5`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__color": Object {
    "background": Object {
      "general": Object {
        "background": "linear-gradient(135deg,rgba(6,147,227,1) 0%,rgb(50,98,118) 49%,rgb(155,81,224) 100%)",
        "clip-path": "clip-path: polygon(50% 0%, 0% 100%, 100% 100%);",
        "opacity": 0.66,
      },
      "label": "Background Gradient",
    },
  },
}
`;

exports[`getBackgroundStyles Get a correct background styles 6`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "backgroundColor": Object {
      "general": Object {
        "background-color": "rgba(12,233,75,1)",
      },
      "label": "Background Color",
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "backgroundImage": Object {
      "general": Object {
        "background-attachment": "scroll",
        "background-clip": "border-box",
        "background-image": "url('https://test.img.com/uploads.png')",
        "background-origin": "padding-box",
        "background-position": "center center",
        "background-repeat": "no-repeat",
        "background-size": "",
        "opacity": 1,
      },
      "label": "Background Image",
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__2": Object {
    "backgroundVideo": Object {
      "general": Object {
        "opacity": 0.72,
      },
      "label": "Video Background",
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3": Object {
    "backgroundGradient": Object {
      "general": Object {
        "background": "linear-gradient(135deg,rgba(6,147,227,1) 0%,rgb(62,102,120) 40%,rgb(155,81,224) 100%)",
        "opacity": 0.51,
      },
      "label": "Background Gradient",
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4": Object {
    "backgroundSVG": Object {
      "general": Object {
        "height": "100%",
      },
      "label": "SVG Wrapper Background",
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 svg *": Object {
    "backgroundSVG": Object {
      "general": Object {
        "height": "100%",
      },
      "label": "SVG Background",
    },
  },
}
`;
